@startuml
top to bottom direction
skinparam nodesep 150
skinparam ranksep 150
skinparam classAttributeIconSize 0
skinparam ClassMemberIconDisplay true
class Hourglass  {
    -- Fields --
    - _size
    - _data[,]
    -- Properties --
    + <<override>> Size
    -- Methods --
    + Hourglass()
    + Initialize()
    + Draw()
}
class Matrix  {
    -- Fields --
    - _size
    - _data[,]
    -- Properties --
    + <<override>> Size
    -- Methods --
    + Matrix()
    + Initialize()
    + Draw()
}
abstract class Shape  {
    -- Fields --
    -- Properties --
    + {abstract} Size
    -- Methods --
    + {abstract} Draw()
    + {abstract} Initialize()
    # ValidateSize()
}
Shape <|-- Hourglass
Shape <|-- Matrix
@enduml
